# fourier-features

./: Fourier Features Example.ipynb  README.md  dev.ipynb  index.html  pyproject.toml
src/fourier_features/: __init__.py  _fit.py  plot.py
