[project]
name = "fourier-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.34.0",
    "duckdb>=1.2.2",
    "jupyter>=1.1.1",
    "notebook>=7.3.3",
    "plotly>=6.0.1",
    "polars>=1.26.0",
]

[project.scripts]
fourier-features = "fourier_features:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
