[project]
name = "fourier-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
